--- a/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.pl.yml
@@ -233,7 +233,7 @@ entry:
         created_at: 'Czas stworzenia'
         published_at: 'Data publikacji'
         published_by: 'Opublikowane przez'
-        # provided_by: 'Provided by'
+        provided_by: 'Dostarczony przez'
     new:
         page_title: 'Zapisz nowy wpis'
         placeholder: 'http://website.com'
@@ -245,7 +245,7 @@ entry:
         page_title: 'Edytuj wpis'
         title_label: 'Tytuł'
         url_label: 'Adres URL'
-        # origin_url_label: 'Origin url (from where you found that entry)'
+        origin_url_label: 'Oryginalny url (gdzie znalazłeś ten wpis)'
         save_label: 'Zapisz'
     public:
         shared_by_wallabag: "Ten artykuł został udostępniony przez <a href='%wallabag_instance%'>wallabag</a>"
